--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "emoji-mart": "^3.0.1",
+    "emoji-picker-react": "^3.4.12",
     "firebase": "^9.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-emoji-picker": "^1.0.13",
     "react-material-ui-form-validator": "^3.0.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
